create github pages

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ SHOP Zedaka Boxes Torah Crowns Spice Boxes Cups TORAH POINTERS SHABBAT CANDLESTI
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a website</a></section><section class="carousel slide cid-rpZZ63qHOB" data-interval="false" id="slider1-1">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="carousel slide cid-rpZZ63qHOB" data-interval="false" id="slider1-1">
 
     
 
